Minor css fixes for demo app, scrollbar fix and top right spinner fix on non webkit/safari

--- a/compile/css/igaro.scss
+++ b/compile/css/igaro.scss
@@ -2,7 +2,8 @@ body {
     background-color:#fff;
     margin:0;
     padding:0 0 0.1em 0;
-    //height:100%;
+    box-sizing: border-box;
+    height:100%;
     color:#424347;
     font-family: "Open Sans", "Helvetica", "Arial";
     line-height:150%;
